--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
+#source [cannot be changed](https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-github-pages-and-jekyll#configuring-jekyll-in-your-github-pages-site).
 theme: jekyll-theme-minimal
